# euromail-python

./: .gitignore  CHANGELOG.md  README.md  context7.json  pyproject.toml  requirements.lock.txt
.github/workflows/: publish.yml
examples/: all_methods.py
src/euromail/: __init__.py  async_client.py  client.py  errors.py  types.py
tests/: test_agent_mailboxes.py
