[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "euromail"
version = "0.1.0"
description = "Official Python SDK for the EuroMail transactional email service"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["euromail", "email", "transactional", "smtp"]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/euromail"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
